--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -2,6 +2,23 @@
 <html lang="es" xmlns:th="http://www.thymeleaft.org">
 
 <head th:replace="/fragments/head :: head"></head>
+<head>
+    <style>
+        #spinner{
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(0,0,0,0.5);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            display: none;
+        }
+    </style>
+</head>
 
 <body>
     <header th:replace="/fragments/header :: header"></header>
@@ -64,11 +81,17 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        <button type="submit" class="btn btn-primary">Recuperar cuenta</button>
+                        <button type="submit" id="recuperar" class="btn btn-primary">Recuperar cuenta</button>
                     </div>
                 </div>
             </div>
         </form>
+    </div>
+
+    <div id="spinner">
+        <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
     </div>
 
 
@@ -82,6 +105,12 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script th:src="@{/js/toast.js}"></script>
+    <script>
+        document.getElementById("recuperar").addEventListener("click", function(){
+            document.getElementById("exampleModalCenter").style.display = "none";
+            document.getElementById("spinner").style.display = "flex";
+        });
+    </script>
 </body>
 
 </html>
