--- a/AppServSalud/src/main/resources/templates/vistaPerfil.html
+++ b/AppServSalud/src/main/resources/templates/vistaPerfil.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html
-    lang="es"
-    xmlns:th="http://www.thymeleaft.org"
->
-    <head th:replace="/fragments/head :: head"></head>
-    <head>
-        <link rel="stylesheet" th:href="@{/styles/editarPerfil.css}">
-    </head>
-    <body>
-        <header th:replace="/fragments/header :: header"></header>
-        <div th:replace="/fragments/toast :: div"></div>
+<html lang="es" xmlns:th="http://www.thymeleaft.org">
+
+<head th:replace="/fragments/head :: head"></head>
+
+<head>
+    <link rel="stylesheet" th:href="@{/styles/editarPerfil.css}">
+</head>
+
+<body>
+    <header th:replace="/fragments/header :: header"></header>
+    <div th:replace="/fragments/toast :: div"></div>
     <div class="container">
         <article class="card-article">
             <header class="card-header">
