implementado motor de busqueda,con si js y css

--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -92,5 +92,6 @@
 ></script>
 <script src="https://kit.fontawesome.com/6959f9ca80.js" crossorigin="anonymous"></script>
 <script th:src="@{/js/toast.js}"></script>
+<script th:src="@{/js/motorBusqueda.js}"></script>
 </body>
 </html>
