--- a/AppServSalud/src/main/resources/templates/fragments/buscador.html
+++ b/AppServSalud/src/main/resources/templates/fragments/buscador.html
@@ -1,8 +1,23 @@
+<!--<div class="container mt-5 mb-5 justify-content-center align-items-center">-->
+<!--    <form   id="searchForm"-->
+<!--            class="d-flex mt-2 "-->
+<!--            role="search"-->
+<!--    >-->
+<!--        <input-->
+<!--                class="form-control"-->
+<!--                type="search"-->
+<!--                placeholder="Turnos, Especialidades, Obras Sociales, Profesionales"-->
+<!--                aria-label="Search"-->
+<!--        >-->
+<!--        <button-->
+<!--                class="btn btn-outline-primary"-->
+<!--                type="submit"-->
+<!--        >Buscar</button>-->
+<!--    </form>-->
+<!--</div>-->
+
 <div class="container mt-5 mb-5 justify-content-center align-items-center">
-    <form
-            class="d-flex mt-2 "
-            role="search"
-    >
+    <form id="searchForm" class="d-flex mt-2" role="search">
         <input
                 class="form-control"
                 type="search"
@@ -14,4 +29,8 @@
                 type="submit"
         >Buscar</button>
     </form>
+    <!-- Contenedor para las opciones de búsqueda -->
+    <div id="searchOptions" class="mt-3">
+        <!-- Las opciones se agregarán dinámicamente aquí -->
+    </div>
 </div>
