--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -29,6 +29,6 @@
           rel="stylesheet"
           th:href="@{/styles/especialidades.css}"
   >
+  <link rel="stylesheet" th:href="@{/styles/motorBusqueda.css}">
   <script src="https://kit.fontawesome.com/6959f9ca80.js" crossorigin="anonymous"></script>
-  <script src=""></script>
 </head>
