agragadas obrasociales en modal,linkeado especialidades

--- a/AppServSalud/src/main/resources/templates/infoTurnos.html
+++ b/AppServSalud/src/main/resources/templates/infoTurnos.html
@@ -24,7 +24,7 @@
                 <h2><span style="color: #006cb0"><strong><span style="font-size: 18pt">Portal de Pacientes</span></strong></span></h2>
                 <p>&nbsp;</p>
 
-                <div class="accordion" id="accordionExample">
+                <div class="accordion" id="accordionExample" style="color:blue;">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -77,16 +77,16 @@
                         <h2> Cerro </h2>
                         <!-- Insertar Sede de Sucursal <p> <strong> Dirección: </strong> </*?php echo $sede_address;?> </p> -->
                         <p><strong>Ubicación: </strong>Pedro Simón Laplace 5749, esq. Blas Pascal – Villa Belgrano- Córdoba</p>
-                        <p><strong>Teléfono:&nbsp;</strong>0810-555-2553</p>
+                        <p><strong>Teléfono:&nbsp;</strong>0810-132-1234</p>
                         <p><strong><span class="" data-color-group="turquoise">Horarios:</span></strong> Lunes a viernes de 8 a 20 hs.</p>
-                        <p><strong><span class="" data-color-group="turquoise">Email:</span> </strong>atencionalpacientecerro@sanatorioallende.com</p>
+                        <p><strong><span class="" data-color-group="turquoise">Email:</span> </strong>hospitalhouse@mailcom</p>
                         <hr>
                         <p style="text-align: center">Ver el listado de <strong>Obras Sociales</strong> y <strong>Prepagas</strong> haciendo clic
                             <button type="button" class="btn text-primary" data-bs-toggle="modal" data-bs-target="#obrasSociales">
                                 <strong>AQUÍ</strong>
                               </button>
                         </p>
-                        <p style="text-align: center">Ver el listado de <b>Especialidad Médicas</b>&nbsp;haciendo clic <a href="#"><strong>AQUÍ</strong></a></p>
+                        <p style="text-align: center">Ver el listado de <b>Especialidad Médicas</b>&nbsp;haciendo clic <a href="/especialidades"><strong>AQUÍ</strong></a></p>
                         <hr>
                         <p>&nbsp;</p>
                         <!-- Insertar Mapa de Google <a href="https://www.google.com/maps/search/</*?php echo $sede_address;?>" target="_blank"> <i class="fas fa-map-marker-alt"></i> Mapa </a>-->
@@ -104,7 +104,23 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+            <strong>OSECAC</strong>
+            <br>
+            <strong>OSPE</strong>
+            <br>
+            <strong>SWISS MEDICAL</strong>
+            <br>
+            <strong>SANCORSALUD</strong>
+            <br>
+            <strong>OSPRERA</strong>
+            <br>
+            <strong>UPCN</strong>
+            <br>
+            <strong>OSDE</strong>
+            <br>
+            <strong>OMIT</strong>
+            <br>
+            <strong>PARTICULAR</strong>
         </div>
       </div>
     </div>
