Implementacion Modal Confirmacion de Contraseña

--- a/AppServSalud/src/main/resources/templates/forms/editarPacienteAdmin.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarPacienteAdmin.html
@@ -193,10 +193,41 @@
                 </div>
                 <div class="row justify-content-center mt-5">
                     <div class="col-lg-4 d-grid">
-                        <button
-                            type="submit"
-                            class="btn btn-primary botones"
-                        >Editar</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Editar
+                    </button>
+                    </div>
+                </div>
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="input-group mb-3">
+                                    <label
+                                            class="input-group-text"
+                                            for="contrasenha"
+                                    >Contraseña</label>
+                                    <input
+                                            type="password"
+                                            class="form-control"
+                                            name="password"
+                                            placeholder="********"
+                                            id="password"
+                                    >
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                <button
+                                        type="submit"
+                                        class="btn btn-primary"
+                                >Confirmar</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
