--- a/AppServSalud/src/main/resources/templates/dashboardProfesional.html
+++ b/AppServSalud/src/main/resources/templates/dashboardProfesional.html
@@ -23,60 +23,105 @@
         <main>
             <div class="container d-flex mt-3">
                 <section
-                    class="col-10 d-flex justify-content-evenly"
+                    class="col-10 d-flex justify-content-center"
                     id="tablero"
                     style="height: 600px;"
                 >
-                    <div class="card justify-content-evenly">
+                    <div class="card justify-content-evenly mx-2">
                         <button
                             onclick="showFragment('principal')"
                             title="Dashboard"
                             class="btn"
-                        >Home</button>
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="1em"
+                                viewBox="0 0 576 512"
+                            ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                <path
+                                    d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"
+                                />
+                            </svg>
+                        </button>
                         <button
                             onclick="showFragment('pacientes')"
                             title="Mis Pacientes"
                             class="btn"
-                        >Mis Pacientes</button>
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="1em"
+                                viewBox="0 0 640 512"
+                            ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                <path
+                                    d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192h42.7c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0H21.3C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7h42.7C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3H405.3zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352H378.7C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7H154.7c-14.7 0-26.7-11.9-26.7-26.7z"
+                                />
+                            </svg>
+                        </button>
                         <button
                             onclick="showFragment('turnos')"
                             title="Mis Turnos"
                             class="btn"
-                        >Mis Turnos</button>
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="1em"
+                                viewBox="0 0 448 512"
+                            ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                <path
+                                    d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z"
+                                />
+                            </svg>
+                        </button>
                         <button
                             onclick="showFragment('misDatos')"
                             title="Mis Datos"
                             class="btn"
-                        >Mis Datos</button>
+                        >
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="1em"
+                                viewBox="0 0 512 512"
+                            ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                <path
+                                    d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"
+                                />
+                            </svg>
+                        </button>
                     </div>
                     <div
                         id="principalFragment"
-                        class="col-sm-8 fragment"
+                        class="col-sm-11 fragment justify-content-center rounded-2"
+                        style="background-color: rgb(118, 194, 118);"
                     >
                         <div th:replace="/fragments/dashProfesionalPrincipal :: principal"></div>
                     </div>
                     <div
                         id="pacientesFragment"
-                        class="col-sm-8 fragment d-none"
+                        class="col-sm-11 fragment justify-content-center d-none rounded-2"
+                        style="background-color: rgb(118, 194, 118);"
                     >
                         <div th:replace="/fragments/dashProfesionalListaPacientes :: pacientes"></div>
                     </div>
 
                     <div
                         id="turnosFragment"
-                        class="col-sm-8 fragment d-none"
+                        class="col-sm-11 fragment justify-content-center d-none rounded-2"
+                        style="background-color: rgb(118, 194, 118);"
                     >
                         <div th:replace="/fragments/dashProfesionalTurnos :: turnos"></div>
                     </div>
                     <div
                         id="misDatosFragment"
-                        class="col-sm-8 fragment d-none"
+                        class="col-sm-11 fragment justify-content-center fragment d-none rounded-2"
+                        style="background-color: rgb(118, 194, 118);"
                     >
                         <div th:replace="/fragments/dashProfesionalMisDatos :: misDatos"></div>
                     </div>
                     <div
                         id="detallePacienteFragment"
-                        class="col-sm-8 fragment d-none modal fade"
+                        class="col-sm-11 fragment justify-content-center d-none modal fade rounded-2"
+                        style="background-color: rgba(17, 34, 17, 0.356);"
                     >
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
@@ -88,10 +133,11 @@
                 <!-- TODO: mostrar el perfil del profesional logueado. -->
                 <aside
                     id="perfil"
-                    style="border: 1px solid red;"
+                    class="col-sm-2 rounded-2 p-2"
+                    style="background-color: rgb(118, 194, 118);"
                 >
                     <div class="d-flex flex-column text-center">
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center m-3">
                             <img
                                 th:src="${profesional.imagen}__}"
                                 alt="Avatar"
