--- a/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
+++ b/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
@@ -1,5 +1,5 @@
 <div
-  class="col-sm-12"
+  class="col-sm-12 px-5"
   th:fragment="principal"
 >
   <div
@@ -9,7 +9,7 @@
     <h5>Dashboard</h5>
   </div>
 
-  <div class="container bg-primary rounded-3 px-5 p-2">
+  <div class="container bg-primary rounded-3 px-5 p-2 text-center">
     <p class="text-white fw-bold fs-4 m-0">
       Bienvenido, <span
         class="text-capitalize"
@@ -26,7 +26,7 @@
   </div>
   <div class="d-flex">
     <div class="container d-flex rounded-3 mt-2 overflow-auto col-sm-9 pb-3 pt-1">
-    <!-- ITERAR para mostrar las ofertas -->
+      <!-- ITERAR para mostrar las ofertas -->
       <div class="card col-sm-4 mx-2">
         OFERTA1 <br>
         OFERTA1 <br>
@@ -68,11 +68,25 @@
         OFERTA1 <br>
       </div>
     </div>
-    <div class="card col-sm-3 d-grid p-2 bg-transparent border-0">
+    <div class="col-sm-2 d-grid p-2">
       <button
         class="btn btn-light mt-1"
+        type="button"
+        data-bs-toggle="modal"
+        data-bs-target="#nuevaOferta"
         href="#"
-      >añadir +</button>
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="1em"
+          viewBox="0 0 448 512"
+        ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+          <path
+            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
+          />
+        </svg>
+        Nueva Oferta
+      </button>
     </div>
   </div>
   <!-- AGREGAR CONDICION PARA QUE SE MUESTRE UNO U OTRO -->
@@ -82,7 +96,31 @@
       style="border: 1px dashed violet; padding: 0;"
     >
       <div class="card col-sm-7 px-2 bg-warning fw-bold">Sin ofertas disponibles</div>
-      <div class="card px-3 fw-bold text-center">+ <br> Agregar nueva oferta</div>
+      <div class="card px-3 fw-bold text-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="1em"
+          viewBox="0 0 448 512"
+        ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+          <path
+            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
+          />
+        </svg>
+        Agregar nueva oferta
+      </div>
+    </div>
+  </div>
+  <div>
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div>
+          <p>Nueva Oferta</p>
+          <form action="">
+            <label for=""></label>
+            <input type="text">
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
