se refactorizo el footer, se agrego estilos y imagenes de fb, ig, wpp

--- a/AppServSalud/src/main/resources/templates/fragments/footer.html
+++ b/AppServSalud/src/main/resources/templates/fragments/footer.html
@@ -1,13 +1,41 @@
 <footer>
-    <div class="footer_textos">
-        <div>
-            <p><h3>Contacto</h3></p>
-            <p><h3>Ubicación</h3></p>
-        </div>
-        <div>
-            <p><h3>Trabajá con nosotros</h3></p>
-            <p><h3>Seguinos en:</h3></p>
-        </div>
+  <div class="footer_textos">
+
+    <div>
+      <p>
+      <h3 class="titulos">Direcciones</h3>
+      </p>
+      <h4>Sede Central MediYa!</h4>
+      <br>
+      <p><b>Nameless 1234, Palermo, CABA.</b></p>
+      <p><a href="https://wa.me/541122222222" target="_blank"><img th:src="@{/assets/logoWpp.png}" alt="wpp"
+            width="75px"></a><b>Tel. +541122222222</b></p>
+      <hr>
+
     </div>
+    <div>
+      <p>
+        <hr>
+      <h3 class="titulos">¡Seguinos!</h3>
+      </p>
+      <div class="seguinos">
+        <a href="https://www.facebook.com/" target="_blank">
+          <img th:src="@{/assets/fbLogo.png}" alt="Facebook" width="44px">
+        </a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img th:src="@{/assets/igLogo.png}" alt="Instagram" width="50px">
+        </a>
+      </div>
+      <hr>
+      <p>
+      <h3 class="titulos">Contacto</h3>
+      </p>
+      <p> <a href="#" target="_blank">
+        <h4>Trabajá con nosotros</h4>
+        </a></p>
+        
+    </div>
+
+  </div>
 
 </footer>
