--- a/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
+++ b/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
@@ -12,37 +12,6 @@
 <body>
 <header th:replace="/fragments/header :: header">
 </header>
-
-<!--<div class="row justify-content-center aling-items-center" >-->
-<!--    <div th:each="profesional : ${profesionales}" class="col-sm-3 mb-3">-->
-<!--        <div class="card" style="width: 18rem;">-->
-<!--            <img th:src="@{/assets/cardiologia.jpg}" alt="...">-->
-<!--            <div class="card-body">-->
-<!--                <h5 th:text="${'Dr/a.'+profesional.apellido}" class="card-title">Dr.Menganito</h5>-->
-<!--                <h7 th:text="${profesional.especialidad}">Especialidad</h7>-->
-<!--                &lt;!&ndash;<p th:text="${profesional.descripcion}"class="card-text"></p>&ndash;&gt;-->
-<!--                <p class="card-text">-->
-<!--                    El Doctor menganito cuanta con mas 15 años de experiencia en su area.-->
-<!--                    El mismo atiende de manera presencial como virtual.-->
-<!--                    para acceder a una consulta con el Haz click en el boton-->
-<!--                </p>-->
-<!--                <span>Reputacion</span>-->
-<!--                <div class="rating" style="font-size: 48px;">-->
-<!--                    <span class="fa fa-star" style="color: gold"></span>-->
-<!--                    <span class="fa fa-star" style="color: gold"></span>-->
-<!--                    <span class="fa fa-star" style="color: gold"></span>-->
-<!--                    <span class="fa fa-half-star" style="color: gold"></span>-->
-<!--                </div>-->
-<!--                <a href="#"  class="btn btn-primary">Solcitar Turno</a>-->
-<!--                &lt;!&ndash;<a th:href="@{/turno/__${profesional.id}__}"  class="btn btn-primary">Solcitar Turno</a>&ndash;&gt;-->
-<!--                &lt;!&ndash;<li><a class="dropdown-item" sec:authorize="hasAuthority('ADMIN')" th:href="@{/autor/registrar}">Crear Autor</a></li>-->
-<!--                <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}"-->
-<!--                href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--                &ndash;&gt;-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 <div class="row justify-content-center align-items-center">
     <div th:each="profesional : ${profesionales}" class="col-sm-3 mb-3">
         <div class="card" style="width: 18rem;">
@@ -86,7 +55,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Debes Iniciar Secion Para acceder al turno</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Debes Iniciar Sesion Para acceder al turno</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" >
@@ -104,11 +73,6 @@
     <footer th:replace="/fragments/footer :: footer"></footer>
     <script th:src="@{/js/modalProfesional.js}"></script>
     <script src="https://kit.fontawesome.com/6959f9ca80.js" crossorigin="anonymous"></script>
-<!--    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"-->
-<!--        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"-->
-<!--        crossorigin="anonymous">-->
-
-<!--    </script>-->
     <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
