confirmacion de contraseña admin, modif profesiona

--- a/AppServSalud/src/main/resources/templates/forms/editarProfesionalAdmin.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarProfesionalAdmin.html
@@ -18,7 +18,7 @@
         <div class="container">
             <form
                 class="formulario"
-                th:action="@{/admin/modProfesional}"
+                th:action="@{/admin/modProfesional/__${profesional.email}__}"
                 method="POST"
             >
                 <div class="text-center mb-5">
@@ -84,7 +84,7 @@
                             <input
                                 class="form-control"
                                 type="date"
-                                name="fechaDeNacimiento"
+                                name="fechaNacimiento"
                                 id="fechaNacimiento"
                                 th:value="${profesional.fechaNacimiento}"
                             />
@@ -143,36 +143,6 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="input-group my-3">
-                            <label
-                                for="password"
-                                class="input-group-text"
-                            >Contraseña</label>
-                            <input
-                                type="password"
-                                class="form-control"
-                                name="password"
-                                placeholder="******"
-                            >
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="input-group my-3">
-                            <label
-                                for="password"
-                                class="input-group-text"
-                            >Repetir Contraseña</label>
-                            <input
-                                type="password"
-                                class="form-control"
-                                name="password2"
-                                placeholder="******"
-                            >
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <div class="input-group mb-3">
                             <label
@@ -180,7 +150,7 @@
                                 for="profesionalMatricula"
                             >N° de Matrícula</label>
                             <input
-                                type="number"
+                                type="text"
                                 class="form-control"
                                 name="matriculaProfesional"
                                 placeholder="0123456789"
