--- a/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
+++ b/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
@@ -106,11 +106,39 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                ...
+                <div class="row justify-content-center align-items-center">
+                 <div class="card w-75 mb-3" th:each="oferta: ${ofertas}">
+                    <div class="card-body">
+                      
+                        <h5 class="card-title" th:text="${oferta.profesional.nombre}"></h5>
+                     
+                            <p class="card-text"  >Horario: 
+                                <span th:text="${oferta.horario}"></span>
+                            </p>
+                            <p class="card-text"  >Tipo de consulta: 
+                                <span th:text="${oferta.tipo}"></span>
+                            </p>
+                            <p class="card-text"  >Ubicacion: 
+                                <span th:text="${oferta.ubicacion}"></span>
+                            </p>
+                            <p class="card-text"  >Detalle de la oferta:
+                                <span th:text="${oferta.detalle}"></span>
+                            </p>
+                            <p class="card-text"  >Precio:
+                                <span th:text="${oferta.precio}"></span>
+                            </p>
+                  
+                     <a href="#" class="btn btn-primary">Reservar turno</a>
+                          
+                    </div>
+                    </div>
+                  </div>
+                </div>
+                
+              </div>
             </div>
         </div>
-    </div>
-</div>
+  
 
     <footer th:replace="/fragments/footer :: footer"></footer>
     <script th:src="@{/js/modalProfesional.js}"></script>
