--- a/AppServSalud/src/main/resources/templates/especialidades.html
+++ b/AppServSalud/src/main/resources/templates/especialidades.html
@@ -10,6 +10,7 @@
 <header th:replace="/fragments/header :: header">
 
 </header>
+<div th:replace="/fragments/toast :: div"></div>
 <div class="container ">
     <div class="col-md-12">
         <h1 style="color: #EE7734">Servicios Médicos</h1>
@@ -130,5 +131,6 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"
 ></script>
+<script th:src="@{/js/toast.js}"></script>
 </body>
 </html>
