--- a/AppServSalud/src/main/resources/templates/fragments/dashProfesionalTurnos.html
+++ b/AppServSalud/src/main/resources/templates/fragments/dashProfesionalTurnos.html
@@ -4,11 +4,47 @@
     <div>--agregar busqueda--</div>
   </div>
   <div class="container rounded-3">
-    <div >
-      <h6>A Confirmar</h6>
+    <div>
+      <h5>A Confirmar</h6>
+      <table class="w-100">
+        <tr>
+          <th>Fecha</th>
+          <th>Hora</th>
+          <th>Paciente</th>
+          <th>Obra Social</th>
+          <th>Estado</th>
+          <th>Acciones</th>
+        </tr>
+        <tr th:each="turno : ${turnos}" th:if="${!turno.activoProfesional}">
+          <td th:text="${turno.fechaTurno}" >fecha</td>
+          <td th:text="${turno.horaTurno}" >hora</td>
+          <td th:text="${turno.paciente.nombre} + ' ' +${turno.paciente.apellido} " >paciente</td>
+          <td th:text="${turno.paciente.obraSocial.name}" >obra social</td>
+          <td th:text="${turno.estado}" >estado</td>
+          <td><a th:href="@{/turno/aceptarTurno/__${turno.id}__}">Aceptar</a></td>
+        </tr>
+      </table>
     </div>
     <div >
       <h6>Próximos</h6>
+      <table class="w-100">
+        <tr>
+          <th>Fecha</th>
+          <th>Hora</th>
+          <th>Paciente</th>
+          <th>Obra Social</th>
+          <th>Estado</th>
+          <th>Acciones</th>
+        </tr>
+        <tr th:each="turno : ${turnos}" th:if="${turno.activoProfesional}">
+          <td th:text="${turno.fechaTurno}" >fecha</td>
+          <td th:text="${turno.horaTurno}" >hora</td>
+          <td th:text="${turno.paciente.nombre} + ' ' +${turno.paciente.apellido} " >paciente</td>
+          <td th:text="${turno.paciente.obraSocial.name}" >obra social</td>
+          <td th:text="${turno.estado}" >estado</td>
+          <td>acciones</td>
+        </tr>
+      </table>
     </div>
     <div >
       <h6>Turnos Cancelados</h6>
