cambios guardados entes de mergear rama de mauri

--- a/AppServSalud/src/main/resources/templates/fragments/dashProfesionalMisDatos.html
+++ b/AppServSalud/src/main/resources/templates/fragments/dashProfesionalMisDatos.html
@@ -13,6 +13,6 @@
     id="dash-titulo"
     class="mt-2 mb-2"
   >
-    <h5>Mostrar Formulario de editar datos del Profesional</h5>
+    <div th:replace="/forms/editarProfesional :: editarProfesional"></div>
   </div>
 </div>
