--- a/AppServSalud/src/main/resources/templates/forms/editarProfesional.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarProfesional.html
@@ -1,132 +1,197 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaft.org">
+<html
+    lang="es"
+    xmlns:th="http://www.thymeleaft.org"
+>
 
-<head th:replace="/fragments/head :: head">
+    <head th:replace="/fragments/head :: head">
 
-    <head>
-        <link rel="stylesheet" th:href="@{/styles/profesional.css}">
-    </head>
+        <head>
+            <link
+                rel="stylesheet"
+                th:href="@{/styles/profesional.css}"
+            >
+        </head>
 
-<body>
-    <header th:replace="/fragments/header :: header"></header>
+    <body>
+        <header th:replace="/fragments/header :: header"></header>
 
-    <div th:replace="/fragments/toast :: div"></div>
-    <div class="container">
-        <form class="formulario" th:action="@{/profesional/modificar/__${profesional.email}__}" method="POST"
-            enctype="multipart/form-data">
-            <input hidden th:value="${profesional.id}" name="id">
+        <div th:replace="/fragments/toast :: div"></div>
+        <div class="container">
             <div class="text-center mb-5">
                 <h3 class="card-title">Editar perfil</h3>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-5">
-                    <div class="input-group mb-3">
-                        <label for="fotoPerfil" class="input-group-text">Cambiar foto de perfil </label>
-
-                        <img th:src="@{/imagen/perfil/__${profesional.id}__}" class="rounded float-start" width="320"
-                            height="280" alt="fotoPerfil" th:if="${profesional.imagen != null}">
-                        <img th:src="@{/assets/avatar.png}" class="circle" width="320" height="280" alt="fotoPerfil"
-                            th:if="${profesional.imagen == null}">
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="file" class="form-control" name="archivo">
-                    </div>
-
-                    <div class="input-group mb-3">
+            <form
+                th:fragment="editarProfesional"
+                th:action="@{/profesional/modificar/__${profesional.email}__}"
+                method="POST"
+                enctype="multipart/form-data"
+            >
+                <input
+                    hidden
+                    th:value="${profesional.id}"
+                    name="id"
+                >
+                <div class="row justify-content-center">
+                    <div class="col-sm-3">
+                        <div class="avatar rounded-circle overflow-hidden">
+                            <img
+                                th:src="@{/imagen/perfil/__${profesional.id}__}"
+                                class="avatar"
+                                alt="fotoPerfil"
+                                th:if="${profesional.imagen != null}"
+                            >
+                            <img
+                                th:src="@{/assets/avatar.png}"
+                                class="avatar"
+                                alt="fotoPerfil"
+                                th:if="${profesional.imagen == null}"
+                            >
+                        </div>
                         <label
-                            for="pacienteNombre"
-                            class="input-group-text"
-                        >Nombre</label>
+                            for="fotoPerfil"
+                            class="rounded-2 bg-white p-2 btn"
+                        >Cambiar foto</label>
                         <input
-                            type="text"
-                            class="form-control"
-                            name="nombre"
-                            placeholder="Juan"
-                            id="pacienteNombre"
-                            th:value="${profesional.nombre}"
+                            id="fotoPerfil"
+                            type="file"
+                            class="form-control-file"
+                            name="archivo"
+                            hidden
                         >
                     </div>
 
-                    <div class="input-group mb-3">
-                        <label
-                            for="pacienteApellido"
-                            class="input-group-text"
-                        >Apellido</label>
-                        <input
-                            type="text"
-                            class="form-control"
-                            name="apellido"
-                            placeholder="Rodriguez"
-                            id="pacienteApellido"
-                            th:value="${profesional.apellido}"
-                        >
-                    </div>
-                    <div class="input-group mb-3 mt-3s">
-                        <label
-                            class="input-group-text"
-                            for="pacienteSexo"
-                        >Sexo</label>
-                        <select
-                            class="form-select"
-                            id="pacienteSexo"
-                            name="sexo"
-                        >
-                            <option th:selected="${profesional.sexo.name == 'MASCULINO'}" value="MASCULINO">Masculino</option>
-                            <option th:selected="${profesional.sexo.name == 'FEMENINO'}" value="FEMENINO">Femenino</option>
-                            <option th:selected="${profesional.sexo.name == 'X'}" value="X">X</option>
-                        </select>
-                    </div>
-                    <div class="input-group mb-3">
-                        <label
-                            class="input-group-text"
-                            for="pacienteTelefono"
-                        >N° de Telefono</label>
-                        <input
-                            type="number"
-                            class="form-control"
-                            name="telefono"
-                            placeholder="1123456789"
-                            id="pacienteTelefono"
-                            th:value="${profesional.telefono}"
-                        >
-                    </div>
-                     <div class="mb-3">
-                                    <label for="exampleInputDescripcion" class="form-label">
-                                        <font style="vertical-align: inherit;">
-                                            <font style="vertical-align: inherit;"><b>Descripcion de su especialidad</b></font>
-                                        </font>
-                                    </label>
-                                    <textarea type="text" 
-                                              class="form-control" 
-                                              name="descripcion" 
-                                              id="exampleFormControlTextarea1" 
-                                              rows="3"
-                                              th:value="${profesional.descripcion}"
-                                              th:text="${profesional.descripcion}"></textarea>
-                                </div>
-                    
-                    
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                        <button type="submit" class="btn btn-primary">Subir</button>
-                    </div>
-                    <a th:href="@{/profesional/darBaja/__${profesional.id}__}" class="btn btn-secondary">Darse de baja</a>
                 </div>
-            </div>
-        </form>
-    </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <div class="input-group mb-3">
+                            <label
+                                for="pacienteNombre"
+                                class="input-group-text"
+                            >Nombre</label>
+                            <input
+                                type="text"
+                                class="form-control"
+                                name="nombre"
+                                placeholder="Juan"
+                                id="pacienteNombre"
+                                th:value="${profesional.nombre}"
+                            >
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="input-group mb-3">
+                            <label
+                                for="pacienteApellido"
+                                class="input-group-text"
+                            >Apellido</label>
+                            <input
+                                type="text"
+                                class="form-control"
+                                name="apellido"
+                                placeholder="Rodriguez"
+                                id="pacienteApellido"
+                                th:value="${profesional.apellido}"
+                            >
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="input-group mb-3 mt-3s">
+                    <label
+                        class="input-group-text"
+                        for="pacienteSexo"
+                    >Sexo</label>
+                    <select
+                        class="form-select"
+                        id="pacienteSexo"
+                        name="sexo"
+                    >
+                        <option
+                            th:selected="${profesional.sexo.name == 'MASCULINO'}"
+                            value="MASCULINO"
+                        >Masculino</option>
+                        <option
+                            th:selected="${profesional.sexo.name == 'FEMENINO'}"
+                            value="FEMENINO"
+                        >Femenino</option>
+                        <option
+                            th:selected="${profesional.sexo.name == 'X'}"
+                            value="X"
+                        >X</option>
+                    </select>
+                </div>
+                <div class="input-group mb-3">
+                    <label
+                        class="input-group-text"
+                        for="pacienteTelefono"
+                    >N° de Telefono</label>
+                    <input
+                        type="number"
+                        class="form-control"
+                        name="telefono"
+                        placeholder="1123456789"
+                        id="pacienteTelefono"
+                        th:value="${profesional.telefono}"
+                    >
+                </div>
+                <div class="mb-3">
+                    <label
+                        for="exampleInputDescripcion"
+                        class="form-label"
+                    >
+                        <font style="vertical-align: inherit;">
+                            <font style="vertical-align: inherit;"><b>Descripcion de su especialidad</b></font>
+                        </font>
+                    </label>
+                    <textarea
+                        type="text"
+                        class="form-control"
+                        name="descripcion"
+                        id="exampleFormControlTextarea1"
+                        rows="3"
+                        th:value="${profesional.descripcion}"
+                        th:text="${profesional.descripcion}"
+                    ></textarea>
+                </div>
+
+
+                <div class="modal-footer">
+                    <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                    >Cancelar</button>
+                    <button
+                        type="submit"
+                        class="btn btn-primary"
+                    >Subir</button>
+                </div>
+                <a
+                    th:href="@{/profesional/darBaja/__${profesional.id}__}"
+                    class="btn btn-secondary"
+                >Darse de baja</a>
+
+            </form>
+        </div>
 
 
 
 
-    <footer th:replace="/fragments/footer :: footer"></footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-    <script th:src="@{/js/toast.js}"></script>
-</body>
+        <footer th:replace="/fragments/footer :: footer"></footer>
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous"
+        ></script>
+        <script th:src="@{/js/toast.js}"></script>
+    </body>
 
 </html>
